--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ django-cors-headers = "^4.6.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+include = ["iComplete", "pools", "migrations"]
+venvPath = "."
+venv = ".venv"
